--- a/hw2_sentiment/pyproject.toml
+++ b/hw2_sentiment/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "cs221"
+name = "hw2-sentiment"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -7,10 +7,5 @@ requires-python = ">=3.12"
 dependencies = [
     "einops>=0.8.1",
     "numpy>=2.3.3",
-]
-
-[tool.uv.workspace]
-members = [
-    "hw1_foundations",
-    "hw2_sentiment",
+    "torch>=2.8.0",
 ]
